--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,14 @@
 			<artifactId>spring-ldap-core</artifactId>
 			<version>2.2.1.RELEASE</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-security</artifactId>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-ldap</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
