--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
-jdk:
-- oraclejdk8
-# would just use default install/script but the ./mvnw script errors on travis
-# obviously this only works for maven builds right now...
-install:
-- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+language: java
+install: true
 script:
-- mvn test
+- mvn install
