--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-before_install:
-  - chmod +x mvnw
-language: java
 jdk:
-  - oraclejdk8
-
-
-script: mvn clean verify
-after_success:
- - bash <(curl -s https://codecov.io/bash)
-notifications:
-email: false
+- oraclejdk8
+# would just use default install/script but the ./mvnw script errors on travis
+# obviously this only works for maven builds right now...
+install:
+- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script:
+- mvn test
