--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ install:
 script:
 - mvn test
 
+script: "mvn cobertura:cobertura"
+
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t uuid-repo-token
