--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,26 @@
+before_install:
+  - chmod +x mvnw
+language: java
 jdk:
-- oraclejdk8
-# would just use default install/script but the ./mvnw script errors on travis
-# obviously this only works for maven builds right now...
-install:
-- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-script:
-- mvn test
+  - oraclejdk8
+services:
+ - mysql
+dist: trusty
+sudo: required
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
 
-script: "mvn cobertura:cobertura"
+before_script:
+- mysql -u root -e 'CREATE DATABASE Hackthon2;'
+- mysql -u root -e "CREATE USER 'Hackthon2'@'localhost' IDENTIFIED BY 'Hackthon2';"
+- mysql -u root -e "GRANT ALL ON Hackthon2.* TO 'Hackthon2'@'localhost';"
 
+script: mvn clean verify
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -t uuid-repo-token
+ - bash <(curl -s https://codecov.io/bash)
+notifications:
+email: false
