--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
-before_install:
-  - chmod +x mvnw
-language: java
 jdk:
-  - oraclejdk8
-services:
- - mysql
-dist: trusty
-sudo: required
-script: mvn clean verify
+- oraclejdk8
+# would just use default install/script but the ./mvnw script errors on travis
+# obviously this only works for maven builds right now...
+install:
+- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script:
+- mvn test
+
+script: "mvn cobertura:cobertura"
+
 after_success:
- - bash <(curl -s https://codecov.io/bash)
-notifications:
-email: false
+  - bash <(curl -s https://codecov.io/bash) -t uuid-repo-token
+  
+
