--- a/pom.xml
+++ b/pom.xml
@@ -126,10 +126,10 @@
                             <webappSourceDir>${basedir}/src/main/resources/static</webappSourceDir>
                             <webappTargetDir>${basedir}/src/main/resources/static</webappTargetDir>
                             <charset>UTF-8</charset>
-                            <cssSourceDir>css/minify</cssSourceDir>
-                            <cssTargetDir>css/minify</cssTargetDir>
+                            <cssSourceDir>css</cssSourceDir>
+                            <cssTargetDir>css</cssTargetDir>
                             <cssSourceFiles>
-
+                                <cssSourceFile>tech-talk.css</cssSourceFile>
                             </cssSourceFiles>
                             <cssFinalFile>combined.css</cssFinalFile>
                             <jsSourceDir>js</jsSourceDir>
